--- a/Welcome-To-The-Tidyverse/exercises/03-Transform-Exercises.Rmd
+++ b/Welcome-To-The-Tidyverse/exercises/03-Transform-Exercises.Rmd
@@ -147,31 +147,20 @@ Use `group_by()` to calculate and then plot the total number of children born ea
 
 ## Your Turn 10
 
-Fill in the blanks to: 
-Rank each name _within its year and sex_. 
+Use `mutate()` and `min_rank()`to rank each row in babynames from _largest_ n to lowest n.
 
 *(Hint: Be sure to remove each `_` before running the code)*
 
 ```{r}
 babynames %>% 
-  group_by(____, ____) %>% 
-  ______(rank = min_rank(____(prop)))
+  ______(rank = _______(____(prop)))
 ```
 
 ## Your Turn 11
 
-Fill in the blanks to: 
-Compute the median of the ranks for each name (i.e., _for each combination of name and sex_). Arrange the results from highest median rank to lowest.
-
-*(Hint: Be sure to remove each `_` before running the code)*
+Group babynames by **year** and then re-rank the data. Filter the results to just rows where **rank == 1**.
 
 ```{r}
-babynames %>% 
-  group_by(year, sex) %>% 
-  mutate(rank = min_rank(desc(prop))) %>% 
-  group_by(____, ____) %>% 
-  ________(median_rank = ______(_____)) %>% 
-  arrange(median_rank)
 
 ```
 
